# ignotus

./: .gitignore  README.md
api/: .env  Cargo.toml  README.md
api/src/: main.rs  words.txt
api/src/apis/account/: create.rs  datas.rs  delete.rs  edit.rs  login.rs
api/src/apis/account/session/: check.rs  remove.rs
api/src/apis/account/wishlist/: add.rs  remove.rs
api/src/apis/utils/: home.rs  item.rs  ping.rs  search.rs
api/src/functions/: checksession.rs  encrypt.rs  mod.rs  password.rs  username.rs  verifcrypt.rs
api/tests/: __test__.sh
api/tests/account/: create.sh  data.sh  edit.sh  login.sh  ping.sh  remove.sh  removesession.sh  sessionCheck.sh  wishlistAdd.sh  wishlistRemove.sh
api/tests/utils/: home.sh  item.sh  search.sh
app/: README.md  package-lock.json  package.json  tsconfig.json
app/.next/dev/: prerender-manifest.json  trace
app/langs/: de.ts  hi.ts  it.ts  nl.ts  pt.ts  ru.ts  sv.ts  zh.ts
app/public/: index.html  manifest.json  sitemap.xml
app/src/: index.tsx
app/src/app/: app.tsx  index.tsx  layout.tsx
app/src/functions/: findInTable.ts  formatTime.ts  index.ts  parseSrt.ts
app/src/hooks/: useAccount.ts  useHome.ts  useItem.ts  useSubTitle.ts  useWatch.ts
app/src/langs/: ar.ts  en.ts  es.ts  fr.ts  jp.ts  ko.ts  tr.ts
app/src/scripts/: watch.ts
app/src/styles/: account.scss  footer.scss  home.scss  loading.scss  search.scss  settings.scss  var.scss  watch.scss
app/src/types/: common.ts  index.ts  useState.ts
videos-server/: .env  Cargo.toml  README.md
videos-server/files/pdf/: txt
videos-server/src/: main.rs
(+526 files in other folders)
