[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
serde_json = "1"
dotenv = "0.15"
actix-cors = "0.6"
argon2 = "0.3"
rand = "0.8"
mongodb = "2.0.0"
futures-util  = "0.3"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }